k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: sidarte/site-homepage:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
