k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
